k8s/Certificate/ingress2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-core2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 20.74.64.127
  - secretName: aks-ingress-tls
  rules:
  - http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          serviceName: service-web
          servicePort: 80
